c4-ecommerce/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: c4-ecommerce
  labels:
    app: c4-ecommerce
    service: c4-ecommerce
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: c4-ecommerce
